# medalforge-lakehouse-data

./: README.md  databricks.yaml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: 00-infra-bootstrap-caller.yaml  00-infra-dag.yaml  01-storage-foundation-caller.yaml  02-databricks-workspace-caller.yaml  03-workspace-config-caller.yaml  10-upload-raw.yaml  20-bundle-deploy-run.yaml
bronze/: main.py  models.py  orchestrator.py
bronze/contracts/: dummy.json
bronze/ingestors/: factory.py  ingestors.py
bronze/interfaces/: ingestor_interfaces.py
bronze/managers/: data_contract_manager.py  table_manager.py
contracts/bronze/: demo.json
contracts/silver/: dummy.yaml
data/input/: MOCK_DATA.csv  json_mock.json
libs/contracts/: bronze_schema.py
monitoring/: azure_table_runs.py
silver/: main.py
silver-test/dqx/: test_driver.py
silver-test/framework/: test_etl_core.py
silver/contracts/: dummy.yaml
silver/customs/: sales_rules.py
silver/dqx/: driver.py
silver/framework/: contract_model.py  custom_engine.py  customs_engine.py  etl_core.py
silver/utils/: merge.py  uc.py
src/onedata/bronze/: main.py  orchestrator.py
src/onedata/bronze/ingestors/: factory.py  ingestors.py
src/onedata/bronze/interfaces/: ingestor_interfaces.py
src/onedata/bronze/managers/: table_manager.py
src/onedata/contracts/silver/: dummy.yaml
src/onedata/silver/: main.py
src/onedata/silver-test/: test_silver_runner_integration.py
src/onedata/silver-test/framework/: test_contract_model.py
src/onedata/silver-test/utils/: test_merge.py
src/onedata/silver/application/: pipeline.py  settings.py
src/onedata/silver/customs/: args.py  custom_sales_rules.py  loader.py  runner.py  sales_rules.py  sdk.py
src/onedata/silver/domain/: dqx.py  etl.py  silver.py  target.py  types.py
src/onedata/silver/dqx/: driver.py
src/onedata/silver/etl/: core.py
src/onedata/silver/stages/: dqx_stage.py  etl_stage.py  write_stage.py
src/onedata/tests/: conftest.py
tests/: conftest.py
tests/integration/: test_bronze_runner_integration.py  test_orchestrator_ingest_mocked.py  test_orchestrator_validate_plan.py  test_silver_runner_integration.py
tests/unit/bronze/: test_main_helpers.py  test_models.py
tests/unit/monitoring/: test_azure_table_runs.py
(+38 files in other folders)
