[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onedata"
version = "0.1.0"
description = "Pipelines Bronze/Silver com monitoramento e DQX"
readme = "README.md"
requires-python = ">=3.10"

# Dependências instaladas sempre que o wheel for instalado no cluster
dependencies = [
  # Spark/Delta
  "pyspark[connect]>=3.5,<3.6",
  "delta-spark>=3,<4",

  # Tipagem/validação
  "pydantic>=2,<3",

  # Azure (monitoria)
  "azure-identity>=1.15",         
  "azure-data-tables>=12.5.0",

  # gRPC stack (usado por pyspark connect e afins)
  "protobuf>=4.25,<5",
  "googleapis-common-protos",
  "grpcio",
]

[project.optional-dependencies]
# Ferramentas de desenvolvimento/testes
dev = [
  "pytest>=7,<8",
  "pytest-cov>=4,<5",
]

# Dependências específicas da Silver
silver = [
  "databricks-labs-dqx==0.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["onedata*"]

[project.scripts]
bronze_main = "onedata.bronze.main:main"
silver_main = "onedata.silver.main:main"
